--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@jsonforms/core": "^2.0.0-beta.3",
-    "@jsonforms/examples": "^2.0.0-beta.3",
-    "@jsonforms/material-renderers": "^2.0.0-beta.3",
-    "material-ui": "^1.0.0-beta.27",
-    "radium": "^0.21.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
+    "@jsonforms/core": "2.0.0-rc.2",
+    "@jsonforms/examples": "2.0.0-rc.2",
+    "@jsonforms/material-renderers": "2.0.0-rc.2",
+    "material-ui": "1.0.0-beta.27",
+    "radium": "0.21.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-redux": "5.0.6",
+    "react-router-dom": "4.2.2",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2"
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
