--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@jsonforms/core": "2.0.0",
-    "@jsonforms/examples": "2.0.0-rc.4",
-    "@jsonforms/material-renderers": "2.0.0",
-    "material-ui": "1.0.0-beta.27",
+    "@jsonforms/core": "2.0.2",
+    "@jsonforms/examples": "2.0.2",
+    "@jsonforms/material-renderers": "2.0.2",
+    "@material-ui/core": "^1.2.0",
     "radium": "0.21.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.1.4",
     "redux": "3.7.2"
   },
   "scripts": {
