--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@jsonforms/core": "2.0.7",
-    "@jsonforms/examples": "2.0.7",
-    "@jsonforms/material-renderers": "2.0.7",
-    "@material-ui/core": "^1.2.0",
-    "radium": "^0.21.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.4",
-    "redux": "^3.7.2"
+    "@jsonforms/core": "^2.2.1",
+    "@jsonforms/examples": "^2.2.1",
+    "@jsonforms/material-renderers": "^2.2.1",
+    "@jsonforms/react": "^2.2.1",
+    "@material-ui/core": "^3.9.2",
+    "radium": "^0.25.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "redux": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
